fixed minor typo in chapter one notes

--- a/Notes/CPM1983_1.md
+++ b/Notes/CPM1983_1.md
@@ -29,7 +29,7 @@ Even though more high-speed main memory storage could be added to the computer, 
 
 ## Disk Addressing
 ### The Problem
-On our C/PM based computer, we will have at least 2-4 disks storing anywhere from 70K bytes to a couple million bytes. When addressing memory inside the main memory of our computer, we can simply use 16-bit numbers to address anywhere in main memory directly. However, addressing memory on the disks is far harder, as using larger and larger pointers to memory addresses is very impractical for these old computers.
+On our CP/M based computer, we will have at least 2-4 disks storing anywhere from 70K bytes to a couple million bytes. When addressing memory inside the main memory of our computer, we can simply use 16-bit numbers to address anywhere in main memory directly. However, addressing memory on the disks is far harder, as using larger and larger pointers to memory addresses is very impractical for these old computers.
 
 ### Disk Layouts
 Instead, to address to a specific record of data on a disk, we would have to manage the specific track and sector the record is on.
