changed latex block equation identifier to work with github markdown

--- a/Notes/CPM1983_1.md
+++ b/Notes/CPM1983_1.md
@@ -20,9 +20,10 @@ For the first programs, it was decided that **four thousand words of storage** w
 
 ### The 8080's Storage
 The 8080 family of microcomputers, on the other hand, can directly address **64K bytes of RAM and deals only with 8 bit bytes** instead of the originally conceived 40 bit words. Here 64K bytes is actually closer to 65 thousand bytes from the following equation:
-$$
+
+```math
 \frac{64\text{ (kilobytes)}}{1} * \frac{1024\ =\ 2^{10} \text{ (bytes)}}{1 \text{ (kilobyte)}} \approx 65,000 \text{ (bytes)}
-$$
+```
 
 ### The Issue with Main Memory
 Even though more high-speed main memory storage could be added to the computer, the main memory is limited in an effort to manage the cost of the computer. Instead, lower cost "mass storage," any type of external memory, is used to store more data. Mass storage can be any external memory, such as tapes, floppy disks, drums, or even RAM memory beyond the normal memory address space.
